--- a/app/src/main/res/layout/activity_validate.xml
+++ b/app/src/main/res/layout/activity_validate.xml
@@ -5,11 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context="com.example.ammulu.waterbilling.ValidateActivity">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textStyle="bold"
-    android:textSize="20dp"
-    android:text="Current Month: Feb"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:textColor="#000089"
+        android:gravity="center"
+        android:layout_marginBottom="30dp"
+        android:padding="20dp"
+        android:text="Globalm Meter Billing System"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Billing"
+        android:textSize="20dp"
+        android:id="@+id/vbilling"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/btnblue"
+        />
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Collections"
+        android:textSize="20dp"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:id="@+id/vcollection"
+        android:background="@drawable/custombutton"/>
 </LinearLayout>
