--- a/app/src/main/res/layout/activity_sub_billing.xml
+++ b/app/src/main/res/layout/activity_sub_billing.xml
@@ -5,22 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginLeft="30dp"
+    android:layout_marginRight="30dp"
+    android:layout_marginBottom="40dp"
     android:gravity="center"
     tools:context="com.example.ammulu.waterbilling.SubBillingActivity">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="165dp"
+        android:src="@drawable/smilelogo" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:textColor="#000089"
         android:gravity="center"
         android:layout_marginBottom="30dp"
-        android:padding="20dp"
         android:text="Globalm Meter Billing System"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Billing"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:id="@+id/billing"
         android:textColor="#ffffff"
         android:textStyle="bold"
@@ -33,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Collections"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:id="@+id/collection"
@@ -42,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Validate"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:id="@+id/validate"
