--- a/app/src/main/res/drawable/btnred.xml
+++ b/app/src/main/res/drawable/btnred.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="14dp"
+        android:radius="20dp"
         />
-    <solid
-        android:color="#f55"
-        />
+    <gradient
+        android:angle="270"
+        android:centerColor="#f55"
+        android:endColor="#f55"
+        android:startColor="#f55"
+        android:type="linear" />
     <padding
         android:left="0dp"
         android:top="0dp"
@@ -14,10 +17,6 @@
         />
     <size
         android:width="200dp"
-        android:height="50dp"
-        />
-    <stroke
-        android:width="1dp"
-        android:color="#f55"
+        android:height="40dp"
         />
 </shape>
