--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,23 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="20dp"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    android:layout_marginBottom="40dp"
     android:gravity="center"
     tools:context="com.example.ammulu.waterbilling.HomeActivity">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="165dp"
+        android:src="@drawable/transwaterlogo" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:textColor="#000089"
         android:gravity="center"
-        android:layout_marginBottom="30dp"
-        android:padding="20dp"
+        android:layout_marginBottom="35dp"
         android:text="Globalm Meter Billing System"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Billing and collection"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:id="@+id/billingbtn"
         android:textColor="#ffffff"
         android:textStyle="bold"
@@ -34,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Reports"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:id="@+id/reports"
@@ -43,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Logout"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:id="@+id/logout"
