--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,13 @@
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="165dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/transwaterlogo" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
@@ -19,9 +26,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30dp"
+                android:textSize="20dp"
                 android:textColor="#000089"
-                android:padding="20dp"
                 android:gravity="center"
                 android:text="Globalm Meter Billing System"/>
         </LinearLayout>
