--- a/app/src/main/res/layout/activity_validate.xml
+++ b/app/src/main/res/layout/activity_validate.xml
@@ -6,21 +6,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:layout_margin="40dp"
     tools:context="com.example.ammulu.waterbilling.ValidateActivity">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="170dp"
+        android:src="@drawable/smilelogo" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:textColor="#000089"
         android:gravity="center"
         android:layout_marginBottom="30dp"
-        android:padding="20dp"
+        android:padding="5dp"
         android:text="Globalm Meter Billing System"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Billing"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:id="@+id/vbilling"
         android:textColor="#ffffff"
         android:textStyle="bold"
@@ -33,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Collections"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:id="@+id/vcollection"
