--- a/app/src/main/res/layout/activity_sub_billing.xml
+++ b/app/src/main/res/layout/activity_sub_billing.xml
@@ -5,15 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginLeft="30dp"
-    android:layout_marginRight="30dp"
-    android:layout_marginBottom="40dp"
-    android:gravity="center"
     tools:context="com.example.ammulu.waterbilling.SubBillingActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="40dp"
+        android:gravity="center"
+        android:orientation="vertical">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="165dp"
-        android:src="@drawable/smilelogo" />
+        android:src="@drawable/transwaterlogo" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,4 +62,16 @@
         android:id="@+id/validate"
         android:layout_marginTop="30dp"
         android:background="@drawable/btnred"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:textSize="15dp"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:id="@+id/subbillback"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/btnblue"/>
+    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
