--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="165dp"
         android:layout_marginTop="40dp"
-        android:src="@drawable/smilelogo"/>
+        android:src="@drawable/transwaterlogo"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
