--- a/app/src/main/res/layout/activity_bill.xml
+++ b/app/src/main/res/layout/activity_bill.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="10dp">
 
         <EditText
-            android:id="@+id/editname"
+            android:id="@+id/editconno"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
