--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -48,7 +48,7 @@
         android:layout_marginTop="20dp">
 
         <EditText
-            android:id="@+id/editamount"
+            android:id="@+id/editcamount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:text="Submit"
             android:textSize="15dp"
-            android:id="@+id/upload"
+            android:id="@+id/editcsubmit"
             android:textColor="#ffffff"
             android:layout_weight="1"
             android:textStyle="bold"
