--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
                 android:layout_marginTop="10dp">
 
                 <EditText
-                    android:id="@+id/editmobileno"
+                    android:id="@+id/editpwd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
