--- a/app/src/main/res/layout/activity_bill.xml
+++ b/app/src/main/res/layout/activity_bill.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Con No(Meter No)"
+            android:hint="Can No(Meter No)"
             android:inputType="text"
             android:padding="10dp"
             android:singleLine="true"
