BILLING AND COLLECTIONS COMPLETED

--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Amount"
-            android:inputType="text"
+            android:inputType="number"
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="#000"
