--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
                 android:layout_marginTop="20dp">
 
                 <EditText
-                    android:id="@+id/editname"
+                    android:id="@+id/etname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
@@ -63,7 +63,7 @@
                 android:layout_marginTop="10dp">
 
                 <EditText
-                    android:id="@+id/editpwd"
+                    android:id="@+id/etpwd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
