Billing validate design

--- a/app/src/main/res/layout/activity_validate_billing.xml
+++ b/app/src/main/res/layout/activity_validate_billing.xml
@@ -1,9 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ammulu.waterbilling.ValidateBillingActivity">
+    android:background="#fff"
+    android:orientation="vertical"
+    android:padding="5dp">
 
-</android.support.constraint.ConstraintLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+                <TableLayout
+                    android:id="@+id/table_btechCourses"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TableRow
+                        android:id="@+id/table_heading"
+                        android:layout_width="match_parent"
+                        android:weightSum="4"
+                        android:background="@drawable/cell_shape"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="0.5"
+                            android:background="@drawable/cell_shape"
+                            android:padding="5dp"
+                            android:text="Cid"
+                            android:textColor="000"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/cell_shape"
+                            android:textColor="#000"
+                            android:layout_weight="0.5"
+                            android:textStyle="bold"
+                            android:padding="5dp"
+                            android:text="bid"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/cell_shape"
+                            android:textColor="#000"
+                            android:layout_weight="1"
+                            android:textStyle="bold"
+                            android:padding="5dp"
+                            android:text="Flat no"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/cell_shape"
+                            android:textColor="#000"
+                            android:layout_weight="1"
+                            android:textStyle="bold"
+                            android:padding="5dp"
+                            android:text="Amount"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/cell_shape"
+                            android:textColor="#000"
+                            android:layout_weight="1"
+                            android:textStyle="bold"
+                            android:padding="5dp"
+                            android:text="Paid date"/>
+                    </TableRow>
+
+
+
+
+                    <TableRow
+                        android:id="@+id/table_data"
+                        android:layout_width="match_parent"
+                        android:weightSum="4"
+                        android:background="@drawable/cell_shape"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/ciddata"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="0.5"
+                            android:background="@drawable/cell_shape"
+                            android:padding="5dp"
+                            android:text="Cid"
+                            android:textColor="000" />
+
+                        <TextView
+                            android:id="@+id/biddata"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/cell_shape"
+                            android:textColor="#000"
+                            android:layout_weight="0.5"
+                            android:padding="5dp"
+                            android:text="bid"/>
+                        <TextView
+                            android:id="@+id/flatnodata"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/cell_shape"
+                            android:textColor="#000"
+                            android:layout_weight="1"
+                            android:padding="5dp"
+                            android:text="Flat no"/>
+                        <TextView
+                            android:id="@+id/amountdata"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/cell_shape"
+                            android:textColor="#000"
+                            android:layout_weight="1"
+                            android:padding="5dp"
+                            android:text="Amount"/>
+                        <TextView
+                            android:id="@+id/paiddatedata"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/cell_shape"
+                            android:textColor="#000"
+                            android:layout_weight="1"
+                            android:padding="5dp"
+                            android:text="Paid date"/>
+                    </TableRow>
+
+
+                </TableLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
